- Allow wildcards in history functions
  (Caution: Might break backwards compatibility, if you have relied on the '_'
   atom as a normal atom)