@@ -33,7 +33,6 @@
 -export([passthrough/1]).
 -export([history/1]).
 -export([history/2]).
--export([history_with_pid/1]).
 -export([validate/1]).
 -export([unload/0]).
 -export([unload/1]).
@@ -56,31 +55,22 @@
 %% Module, function and arguments that the mock module got called with.
 -type meck_mfa() :: {Mod::atom(), Func::atom(), Args::[term()]}.
 
-%% @type history() = [{meck_mfa(), Result::term()}
-%%                     | {meck_mfa(), Class:: exit | error | throw,
+%% @type history() = [{pid(), meck_mfa(), Result::term()}
+%%                     | {pid(), meck_mfa(), Class:: exit | error | throw,
 %%                        Reason::term(), Stacktrace::list(mfa())}].
-%% History is a list of either successful function calls with a
-%% returned result or function calls that resulted in an exception
-%% with a type, reason and a stack trace.
--type history() :: [{meck_mfa(), Result::term()}
-                    | {meck_mfa(), Class:: exit | error | throw,
-                       Reason::term(), Stacktrace::[mfa()]}].
-
-%% @type history_with_pid() = [{Pid::pid(), meck_mfa(), Result::term()}
-%%                     | {Pid::pid(), meck_mfa(), Class:: exit | error | throw,
-%%                        Reason::term(), Stacktrace::list(mfa())}].
-%% history_with_pid is a list of either successful function calls with a
-%% returned result or function calls that resulted in an exception
-%% with a type, reason and a stack trace and with the pid that made the call.
--type history_with_pid() :: [{Pid::pid(), meck_mfa(), Result::term()}
-                    | {Pid::pid(), meck_mfa(), Class:: exit | error | throw,
+%% History is a list of either successful function calls with a returned
+%% result or function calls that resulted in an exception % with a type,
+%% reason and a stack trace. Each tuple begins with the pid of the process
+%% that made the call to the function.
+-type history() :: [{pid(), meck_mfa(), Result::term()}
+                    | {pid(), meck_mfa(), Class:: exit | error | throw,
                        Reason::term(), Stacktrace::[mfa()]}].
 
 %% Records
 -record(state, {mod :: atom(),
                 expects :: dict(),
                 valid = true :: boolean(),
-                history = [] :: history_with_pid(),
+                history = [] :: history(),
                 original :: term(),
                 was_sticky :: boolean()}).
 
@@ -256,8 +246,8 @@ validate(Mod) when is_list(Mod) ->
 %% @spec history(Mod::atom()) -> history()
 %% @doc Return the call history of the mocked module.
 %%
-%% Returns a list of calls to the mocked module and their
-%% results. Results can be either normal Erlang terms or exceptions
+%% Returns a list of calls to the mocked module, which process called them and
+%% their results. Results can be either normal Erlang terms or exceptions
 %% that occurred.
 -spec history(Mod::atom()) -> history().
 history(Mod) when is_atom(Mod) -> call(Mod, history).
@@ -269,16 +259,8 @@ history(Mod) when is_atom(Mod) -> call(Mod, history).
 %% the specified Pid.  Results can be either normal Erlang terms or
 %% exceptions that occurred.
 -spec history(Pid::pid(), Mod::atom()) -> history().
-history(Pid, Mod) when is_pid(Pid) and is_atom(Mod) -> call(Mod, {history, Pid}).
-
-%% @spec history_with_pid(Mod::atom()) -> history_with_pid()
-%% @doc Return the call history, including the pids, of the mocked module.
-%%
-%% Returns a list of calls to the mocked module and their results for
-%% including the pid of the calling procees.  Results can be either
-%% normal Erlang terms or exceptions that occurred.
--spec history_with_pid(Mod::atom()) -> history_with_pid().
-history_with_pid(Mod) when is_atom(Mod) -> call(Mod, history_with_pid).
+history(Pid, Mod) when is_pid(Pid) and is_atom(Mod) -> 
+    match_history(match_mfa('_', Pid), call(Mod, history)).
 
 %% @spec unload() -> list(atom())
 %% @doc Unloads all mocked modules from memory.
@@ -393,10 +375,6 @@ handle_call({delete, Func, Arity}, _From, S) ->
     NewExpects = delete_expect(S#state.mod, Func, Arity, S#state.expects),
     {reply, ok, S#state{expects = NewExpects}};
 handle_call(history, _From, S) ->
-    {reply, get_history_without_pid(S#state.history), S};
-handle_call({history, Pid}, _From, S) ->
-    {reply, get_history_by_pid(Pid, S#state.history), S};
-handle_call(history_with_pid, _From, S) ->
     {reply, lists:reverse(S#state.history), S};
 handle_call(invalidate, _From, S) ->
     {reply, ok, S#state{valid = false}};
@@ -751,24 +729,6 @@ add_history(Pid, Mod, Func, Args, Class, Reason, Stacktrace) ->
 add_history(Mod, Item) ->
     cast(Mod, {add_history, Item}).
 
-get_history_by_pid(Pid, History) ->
-    lists:foldl(
-      fun(Tuple, Acc) ->
-              case element(1, Tuple) of
-                  Pid ->
-                      [remove_first_element(Tuple) | Acc];
-                  _ ->
-                      Acc
-              end
-      end, [], History).
-
-get_history_without_pid(History) ->
-    lists:map(fun(Item) -> remove_first_element(Item) end,
-              lists:reverse(History)).
-
-remove_first_element(Tuple) when is_tuple(Tuple) ->
-    list_to_tuple(tl(tuple_to_list(Tuple))).
-
 has_call(MFA, History) ->
     [] =/= match_history(match_mfa(MFA), History).
 
@@ -779,6 +739,8 @@ match_history(MatchSpec, History) ->
     MS = ets:match_spec_compile(MatchSpec),
     ets:match_spec_run(History, MS).
 
-match_mfa(MFA) ->
-    [{{MFA, '_'}, [], ['$_']},
-     {{MFA, '_', '_', '_'}, [], ['$_']}].
+match_mfa(MFA) -> match_mfa(MFA, '_').
+
+match_mfa(MFA, Pid) ->
+    [{{Pid, MFA, '_'}, [], ['$_']},
+     {{Pid, MFA, '_', '_', '_'}, [], ['$_']}].
